FullQa New/src/FinancialForce ERP Core/objects/BillingDocument__c.object
<CustomObject>
    <customHelpPage>BillingDocumentHelp</customHelpPage>
    <description>Contains sales invoice and sales credit note billing documents that enable you to bill and credit customers.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Salesforce Account to which this document relates.</description>
        <inlineHelpText>Lookup to the Salesforce Account to which this document relates.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Documents</relationshipLabel>
        <relationshipName>Billing_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnalysisItem1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</description>
        <inlineHelpText>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</inlineHelpText>
        <label>Analysis Item 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AnalysisItem__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Analysis_1</value>
            </filterItems>
            <filterItems>
                <field>AnalysisItem__c.RecordType.NamespacePrefix</field>
                <operation>equals</operation>
                <value>fferpcore</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AnalysisItem__c</referenceTo>
        <relationshipLabel>Related Documents 1</relationshipLabel>
        <relationshipName>RelatedDocuments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnalysisItem2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</description>
        <inlineHelpText>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</inlineHelpText>
        <label>Analysis Item 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AnalysisItem__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Analysis_2</value>
            </filterItems>
            <filterItems>
                <field>AnalysisItem__c.RecordType.NamespacePrefix</field>
                <operation>equals</operation>
                <value>fferpcore</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AnalysisItem__c</referenceTo>
        <relationshipLabel>Related Documents 2</relationshipLabel>
        <relationshipName>RelatedDocuments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnalysisItem3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</description>
        <inlineHelpText>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</inlineHelpText>
        <label>Analysis Item 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AnalysisItem__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Analysis_3</value>
            </filterItems>
            <filterItems>
                <field>AnalysisItem__c.RecordType.NamespacePrefix</field>
                <operation>equals</operation>
                <value>fferpcore</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AnalysisItem__c</referenceTo>
        <relationshipLabel>Related Documents 3</relationshipLabel>
        <relationshipName>RelatedDocuments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingAccountName__c</fullName>
        <description>Name of the account to appear on the billing document as the account being billed.</description>
        <inlineHelpText>Name of the account to appear on the billing document as the account being billed.</inlineHelpText>
        <label>Billing Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated company.</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Billing Documents</relationshipLabel>
        <relationshipName>Billing_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletionProcessTracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the process tracking record to which this billing document currently relates.</description>
        <inlineHelpText>Lookup to the process tracking record to which this billing document currently relates.</inlineHelpText>
        <label>Completion Process</label>
        <referenceTo>ProcessTracking__c</referenceTo>
        <relationshipLabel>Billing Documents</relationshipLabel>
        <relationshipName>BillingDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerReference__c</fullName>
        <description>External customer reference.</description>
        <inlineHelpText>External customer reference.</inlineHelpText>
        <label>Customer Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DateIssued__c</fullName>
        <description>Date on which the billing document was sent.</description>
        <inlineHelpText>Date on which the billing document was sent.</inlineHelpText>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the sales invoice or credit note.</description>
        <inlineHelpText>Description of the sales invoice or credit note.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DiscountTotal__c</fullName>
        <description>The total discount of all billing document line items associated with this billing document.</description>
        <inlineHelpText>The total saving of all billing document line items associated with this billing document.</inlineHelpText>
        <label>Discount Total</label>
        <summarizedField>BillingDocumentLineItem__c.DiscountTotal__c</summarizedField>
        <summaryForeignKey>BillingDocumentLineItem__c.BillingDocument__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DocumentDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date on which the document was created.</description>
        <inlineHelpText>Date on which the document was created.</inlineHelpText>
        <label>Document Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocumentDueDate__c</fullName>
        <description>Date on which payment is expected.</description>
        <inlineHelpText>Date on which payment is expected.</inlineHelpText>
        <label>Document Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocumentStatus__c</fullName>
        <description>Status of the billing document. The status can be Draft or Complete. When the status is complete, you can only edit the Document Due Date, Customer Reference and Description.</description>
        <inlineHelpText>Status of the billing document. The status can be Draft or Complete. When the status is complete, you can only edit the Document Due Date, Customer Reference and Description.</inlineHelpText>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocumentTotal__c</fullName>
        <description>Total value of all the billing document line items on this billing document.</description>
        <inlineHelpText>Total value of all the billing document line items on this billing document.</inlineHelpText>
        <label>Document Total</label>
        <summarizedField>BillingDocumentLineItem__c.TotalValue__c</summarizedField>
        <summaryForeignKey>BillingDocumentLineItem__c.BillingDocument__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DocumentTypePrefix__c</fullName>
        <formula>IF(ISPICKVAL(DocumentType__c, &quot;Credit Note&quot;), &quot;CRN&quot;, &quot;INV&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <description>Indicates whether the document is a sales invoice or a sales credit note.</description>
        <inlineHelpText>Indicates whether the document is a sales invoice or a sales credit note.</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalDocumentNumber__c</fullName>
        <externalId>true</externalId>
        <label>External Document Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FooterText__c</fullName>
        <description>Text to be shown at the end of printed billing documents.</description>
        <inlineHelpText>Text to be shown at the end of printed billing documents.</inlineHelpText>
        <label>Footer Text</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HeaderText__c</fullName>
        <description>Text to be shown at the start of printed billing documents.</description>
        <inlineHelpText>Text to be shown at the start of printed billing documents.</inlineHelpText>
        <label>Header Text</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsBillingAddressValidated__c</fullName>
        <description>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(BillingStreet__c) &amp;&amp;
              ISBLANK(BillingCity__c) &amp;&amp;
              ISBLANK(BillingState__c) &amp;&amp;
              ISBLANK(BillingPostalCode__c) &amp;&amp;
              ISBLANK(BillingCountry__c)
            ) &amp;&amp;
            ( BillingStreet__c  =  ValidatedBillingStreet__c ) &amp;&amp;
            ( BillingCity__c =  ValidatedBillingCity__c ) &amp;&amp;
            ( BillingState__c =  ValidatedBillingState__c ) &amp;&amp;
            ( BillingPostalCode__c =  ValidatedBillingPostalCode__c ) &amp;&amp;
            ( BillingCountry__c =  ValidatedBillingCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsComplete__c</fullName>
        <formula>ISPICKVAL(DocumentStatus__c, &quot;Complete&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShippingAddressValidated__c</fullName>
        <description>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(ShippingStreet__c) &amp;&amp;
              ISBLANK(ShippingCity__c) &amp;&amp;
              ISBLANK(ShippingState__c) &amp;&amp;
              ISBLANK(ShippingPostalCode__c) &amp;&amp;
              ISBLANK(ShippingCountry__c)
            ) &amp;&amp;
            ( ShippingStreet__c  =  ValidatedShippingStreet__c ) &amp;&amp;
            ( ShippingCity__c =  ValidatedShippingCity__c ) &amp;&amp;
            ( ShippingState__c =  ValidatedShippingState__c ) &amp;&amp;
            ( ShippingPostalCode__c =  ValidatedShippingPostalCode__c ) &amp;&amp;
            ( ShippingCountry__c =  ValidatedShippingCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetTotal__c</fullName>
        <description>The total net value of all billing document line items associated with this billing document.</description>
        <inlineHelpText>The total net value of all billing document line items associated with this billing document.</inlineHelpText>
        <label>Net Total</label>
        <summarizedField>BillingDocumentLineItem__c.NetValue__c</summarizedField>
        <summaryForeignKey>BillingDocumentLineItem__c.BillingDocument__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfBillingDocumentLineItems__c</fullName>
        <description>Number of billing document line items currently associated with this billing document.</description>
        <inlineHelpText>Number of billing document line items currently associated with this billing document.</inlineHelpText>
        <label>Number Of Billing Document Line Items</label>
        <summaryForeignKey>BillingDocumentLineItem__c.BillingDocument__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RelatedDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related invoice or credit note.</description>
        <inlineHelpText>Lookup to the related invoice or credit note.</inlineHelpText>
        <label>Related Document</label>
        <referenceTo>BillingDocument__c</referenceTo>
        <relationshipLabel>Related Documents</relationshipLabel>
        <relationshipName>RelatedDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportingDocumentTotal__c</fullName>
        <description>Total value of all the billing document line items on this billing document based on the Document Type. If the document is an invoice, the value is the same as the Document Total. If the document is a credit note, the value is calculated using the formula: Document Total * -1.</description>
        <formula>IF (ISPICKVAL(DocumentType__c, &quot;Credit Note&quot;),  DocumentTotal__c * -1, DocumentTotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total value of all the billing document line items on this billing document based on the Document Type.</inlineHelpText>
        <label>Reporting Document Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShippingAccountName__c</fullName>
        <description>Name of the account to appear on the billing document as the Shipping Account.</description>
        <inlineHelpText>Name of the account to appear on the billing document as the Shipping Account.</inlineHelpText>
        <label>Shipping Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <label>Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <label>Shipping State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TaxValueTotal__c</fullName>
        <description>The total tax value of all billing document line items associated with this billing document.</description>
        <inlineHelpText>The total tax value of all billing document line items associated with this billing document.</inlineHelpText>
        <label>Tax Value Total</label>
        <summarizedField>BillingDocumentLineItem__c.TaxValueTotal__c</summarizedField>
        <summaryForeignKey>BillingDocumentLineItem__c.BillingDocument__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValidatedBillingCity__c</fullName>
        <label>Validated Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedBillingCountry__c</fullName>
        <label>Validated Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedBillingPostalCode__c</fullName>
        <label>Validated Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedBillingState__c</fullName>
        <label>Validated Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedBillingStreet__c</fullName>
        <label>Validated Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ValidatedShippingCity__c</fullName>
        <label>Validated Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedShippingCountry__c</fullName>
        <label>Validated Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedShippingPostalCode__c</fullName>
        <label>Validated Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedShippingState__c</fullName>
        <label>Validated Shipping State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedShippingStreet__c</fullName>
        <label>Validated Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <label>Billing Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DocumentType__c</columns>
        <columns>Account__c</columns>
        <columns>DocumentStatus__c</columns>
        <columns>DocumentDate__c</columns>
        <columns>DocumentTotal__c</columns>
        <columns>RelatedDocument__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BD{0000000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>